# Aim-Trainer

./: .gitignore  CMakeLists.txt  README.md
project/: CMakeLists.txt
project/src/: Button.cpp  Button.h  Crosshair.cpp  Crosshair.h  GameData.cpp  GameData.h  Logger.cpp  Logger.h  ScreenManager.cpp  ScreenManager.h  ScreenState.h  Settings.h  SpatialHash.h  Velocity.h  learn.cpp  main.cpp
project/src/Entities/: CircleTarget.cpp  CircleTarget.h  Entity.cpp  Entity.h  HitBox.cpp  HitBox.h
project/src/Screens/: GameScreen.cpp  GameScreen.h  MenuScreen.cpp  MenuScreen.h  PauseScreen.cpp  PauseScreen.h  RangeScreen.cpp  RangeScreen.h  Screen.h  SettingsScreen.cpp  SettingsScreen.h
project/src/Spawners/: BasicSpawner.cpp  BasicSpawner.h  EasySpawner.cpp  EasySpawner.h  MediumSpawner.cpp  MediumSpawner.h  Spawner.cpp  Spawner.h
